--- a/w01/src/App.css
+++ b/w01/src/App.css
@@ -1,18 +1,21 @@
 .App {
   text-align: center;
 }
-
-h1 {
-  color: green;
-  background: yellow;
-}
-
-h3 {
+h2 {
+  background: #33373f;
   color: #fff;
-  background: #000;
+}
+button,
+span {
+  font-size: 15px;
 }
 
-button,
-button + span {
-  font-size: 20px;
+/* s : divider */
+.componentWrap {
+  border: 1px solid #000;
+  padding: 10px 0;
 }
+.componentWrap + .componentWrap {
+  margin-top: 30px;
+}
+/* e : // divider */
