--- a/w01/src/App.css
+++ b/w01/src/App.css
@@ -1,6 +1,10 @@
 .App {
   text-align: center;
 }
+.title {
+  text-align: center;
+  margin: 30px 0;
+}
 .componentWrap > h1 {
   text-align: center;
 }
