add : week12 auth with firebase(join, login) / RTDB

--- a/w01/src/App.css
+++ b/w01/src/App.css
@@ -26,3 +26,10 @@ span {
   margin-top: 30px;
 }
 /* e : // divider */
+
+/* s : etc */
+.cart {
+  cursor: pointer;
+  font-size: 16px;
+}
+/* e : // etc */
