--- a/w01/src/App.css
+++ b/w01/src/App.css
@@ -47,4 +47,11 @@ span {
   align-items: center;
   border-radius: 100%;
 }
+
+.textarea {
+  width: 100%;
+  outline: none;
+  border: 0;
+  border-bottom: 1px solid #000;
+}
 /* e : // etc */
