--- a/w01/src/App.css
+++ b/w01/src/App.css
@@ -54,4 +54,28 @@ span {
   border: 0;
   border-bottom: 1px solid #000;
 }
+
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
+.cmt-toggle {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.edit,
+.delete {
+  font-size: 18px;
+  margin-left: 6px;
+  cursor: pointer;
+  color: #999;
+}
 /* e : // etc */
